fix alignment of tag list and button in home page responsiveness

--- a/src/features/layout/home/home.module.scss
+++ b/src/features/layout/home/home.module.scss
@@ -200,23 +200,35 @@
             height: 300px;
           }
 
-          .tagListContainer {
-            font-size: 1rem;
+          .portalBottom {
             display: flex;
-            gap: 0.75rem;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
 
-            @media screen and (width <= 800px) {
-              font-size: 0.7rem;
+            @media screen and (width <=1200px) {
+              flex-direction: column-reverse;
             }
 
-            @media screen and (width <= 600px) {
-              font-size: 2.25vw;
-            }
-          }
+            .tagListContainer {
+              font-size: 1rem;
+              display: flex;
+              gap: 0.75rem;
 
-          .homeButton {
-            @media screen and (width <= 800px) {
-              padding: 20px var(--content-padding);
+              @media screen and (width <= 800px) {
+                font-size: 0.7rem;
+              }
+
+              @media screen and (width <= 600px) {
+                font-size: 2.25vw;
+              }
+            }
+
+            .homeButton {
+              @media screen and (width <= 800px) {
+                padding: 20px var(--content-padding);
+              }
             }
           }
         }
